--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Spring Boot project for data </description>
 	<properties>
 		<java.version>17</java.version>
+		<jakarta-servlet.version>4.0.3</jakarta-servlet.version>
+		<jersey.version>2.36</jersey.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -45,6 +47,16 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-core_2.13</artifactId>
+			<version>3.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-sql_2.13</artifactId>
+			<version>3.5.1</version>
 		</dependency>
 	</dependencies>
 
